some params modified for test